<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/color_fragment_menu_done"
            android:icon="@drawable/ic_done_white_24dp"
            app:showAsAction="always"
            android:title="@string/note_fragment_menu_done"
            android:orderInCategory="0"/>
</menu>