<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/colors_list_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/colors_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/colors_list_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="24dp"
        android:src="@drawable/ic_add_white_24dp"
        app:elevation="4dp"/>
</RelativeLayout>