...
            android:layout_marginEnd="@dimen/color_fragment_default_margin"
            android:layout_marginStart="@dimen/color_fragment_default_margin"
            android:layout_marginBottom="@dimen/color_fragment_between_margin"
            android:layout_marginTop="@dimen/color_fragment_between_margin"
            android:weightSum="@integer/colors_list_filter_columns_weight_sum">
            <CheckBox
                android:id="@+id/colors_list_filter_start_date_check"
                android:layout_width="0dp"
                android:layout_weight="@integer/colors_list_filter_first_column_weight"
                android:layout_height="wrap_content"
                android:text="@string/colors_list_filter_start_date"
                android:layout_gravity="center_vertical"
                android:checked="true"/>
...
            android:layout_marginEnd="@dimen/color_fragment_default_margin"
            android:layout_marginStart="@dimen/color_fragment_default_margin"
            android:layout_marginBottom="@dimen/color_fragment_between_margin"
            android:layout_marginTop="@dimen/color_fragment_between_margin"
            android:weightSum="@integer/colors_list_filter_columns_weight_sum">
            <CheckBox
                android:id="@+id/colors_list_filter_end_date_check"
                android:layout_width="0dp"
                android:layout_weight="@integer/colors_list_filter_first_column_weight"
                android:layout_height="wrap_content"
                android:text="@string/colors_list_filter_end_date"
                android:layout_gravity="center_vertical"
                android:checked="true"/>
...
