<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <EditText
            android:id="@+id/colors_list_search_query"
            android:layout_margin="@dimen/color_fragment_default_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>